--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "pug": "^3.0.2"
+  },
+  "scripts": {
+    "start": "node src/server.mjs"
   }
 }
