--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-openid-connect": "^2.14.0",
     "pug": "^3.0.2"
   },
   "scripts": {
