--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "express-openid-connect": "^2.14.0",
-    "pug": "^3.0.2"
+    "express-openid-connect": "^2.15.0",
+    "helmet": "^6.1.5",
+    "pug": "^3.0.2",
+    "undici": "^5.22.0"
   },
   "scripts": {
-    "start": "node src/server.mjs"
+    "start": "node ./src/server.mjs"
   }
 }
