--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "express-async-errors": "3.1.1",
+    "express-async-errors": "^3.1.1",
     "express-openid-connect": "^2.15.0",
     "helmet": "^6.1.5",
     "pug": "^3.0.2",
